Fix:About me alignment
Fixed alignment of text and image in About Me section

--- a/output.css
+++ b/output.css
@@ -615,10 +615,6 @@ video {
   height: 150px;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -633,10 +629,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.grow {
-  flex-grow: 1;
 }
 
 .transform {
@@ -695,6 +687,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -733,8 +729,13 @@ video {
      object-fit: cover;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.object-scale-down {
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .px-2 {
@@ -796,11 +797,6 @@ video {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -876,6 +872,11 @@ video {
   transition-duration: 150ms;
 }
 
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -889,6 +890,11 @@ video {
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -938,12 +944,21 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:mx-10 {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+  }
+
   .md\:-ml-20 {
     margin-left: -5rem;
   }
 
   .md\:w-1\/2 {
     width: 50%;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:flex-row {
@@ -983,9 +998,9 @@ video {
     padding-right: 1.5rem;
   }
 
-  .lg\:px-\[15vw\] {
-    padding-left: 15vw;
-    padding-right: 15vw;
+  .lg\:px-\[15\%\] {
+    padding-left: 15%;
+    padding-right: 15%;
   }
 
   .lg\:pl-\[100px\] {
@@ -1003,9 +1018,11 @@ video {
     margin-left: 3rem;
     margin-right: 3rem;
   }
+}
 
-  .xl\:px-\[25vw\] {
-    padding-left: 25vw;
-    padding-right: 25vw;
+@media (min-width: 1536px) {
+  .\32xl\:px-\[25\%\] {
+    padding-left: 25%;
+    padding-right: 25%;
   }
 }
